Fix enroll/logout buttons alignment

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -51,6 +51,10 @@ h1 {
     margin-left: 57px;
 }
 
+#enrollButton,#logoutButton {
+    margin-top: 6px;
+}
+
 #wrapper {
 	width: 90%;
 	margin: auto;
